Ensures that peeking launcher won't open underneath the a11y keyboard

Bug: 869325
Change-Id: I7d939b5484869cb8e620f2f8152f240e433b3086
Reviewed-on: https://chromium-review.googlesource.com/1229361
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Cr-Commit-Position: refs/heads/master@{#592173}